# 3

./: .gitignore  Cargo.toml  hardhat.config.js  package-lock.json  package.json
.wake/extension/: local-local-chain-38e66563-074f-44d9-bd80-e0e8b7dc937e.json
backend/: compilers: {.md  hardhat.config.js  package-lock.json  package.json  truffle-config.js
backend/scripts/: deploy.js
backend/src/: Cargo.toml  main.rs
backend/src/api/: gallery.rs  mod.rs  upload.rs
backend/src/blockchain/: contract_interaction.rs  mod.rs
backend/src/ipfs/: ipfs_client.rs
contracts/: .package-lock.json  MusicNFT.sol
frontend/: craco.config.js  package-lock.json  package.json
frontend/src/: App.jsx  ErrorBoundary.js  contracts.js  contracts.ts  index.css  index.html  index.js
frontend/src/components/: AudioPlayer.jsx  AudioPlayer.tsx  ErrorBoundary.jsx  MusicVisualizer.js  NFTCard.jsx  NFTCard.tsx  NFTGallery.js  Navbar.jsx  UploadForm.jsx  WalletConnect.jsx  package-lock.json  package.json
frontend/src/config/: wagmi.js  wagmi.ts
frontend/src/hooks/: useWeb3.js  useWeb3.ts
frontend/src/pages/: Gallery.jsx  Home.jsx  Mint.jsx  MintNFT.jsx  MyNFTs.jsx
frontend/src/types/: contract.ts  nft.ts  wallet.ts
frontend/src/utils/: contracts.js  wavesurfer.js
scripts/: deploy.js
